# ROS2_project_franka

./: .gitignore  README.md
docker/: Dockerfile  build.sh  exec.sh  run.sh
src/cube_pose_estimator/: package.xml  setup.cfg  setup.py
src/cube_pose_estimator/cube_pose_estimator/: cube_pose_node.py
src/fr3_pick_pipeline/: CMakeLists.txt  package.xml
src/fr3_pick_pipeline/src/: cube_collision_object_node.cpp
src/franka_description/end_effectors/common/: franka_hand.xacro
src/franka_description/robots/common/: franka_arm.ros2_control.xacro  franka_arm.srdf.xacro
src/franka_description/rviz/: visualize_franka.rviz
src/franka_fr3_moveit_config/: package.xml
src/franka_fr3_moveit_config/config/: fr3_controllers.yaml  fr3_controllers_gazebo.yaml  sensors_3d.yaml
src/franka_fr3_moveit_config/rviz/: moveit.rviz
src/franka_gazebo_bringup/: CMakeLists.txt
src/franka_gazebo_bringup/config/: franka_gazebo_controllers.yaml
src/franka_gazebo_bringup/launch/: gazebo_franka_arm_example_controller.launch copy.py  moveit_gazebo_franka_arm_example_controller.launch.py
src/franka_gazebo_bringup/urdf/: franka_arm.gazebo copy.xacro  franka_arm.gazebo.xacro
src/franka_gazebo_bringup/worlds/: my_world.sdf  my_world_obstacle.sdf
