<?xml version="1.0"?> 
<package format="3"> 
  <name>fr3_pick_pipeline</name> 
  <version>0.0.1</version> 
  <description>FR3 pick pipeline helper nodes</description> 
  <maintainer email="you@example.com">you</maintainer> 
  <license>Apache-2.0</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export> 
    <build_type>ament_cmake</build_type> 
  </export> 

</package>